# car_racing

./: .gitignore  LICENSE  README.md  car_racing_demo.ipynb  config.yaml  demo_agent.py  example.py  main.py  pyproject.toml  test_config.yaml  test_installation.py  test_models.py
data/: training_data.h5
src/world_models/: __init__.py  agents.py  config.py  data_collection.py  training.py
src/world_models/data/: test_parallel_data.h5
src/world_models/models/: __init__.py  controller.py  fsq_vae.py  world_model.py
