[project]
name = "carracing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box2d-py>=2.3.8",
    "gymnasium>=1.2.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pygame>=2.6.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
